# quickjs

./: .gitignore  Makefile  README.md  module.c  pyproject.toml  setup.py  test_quickjs.py
.github/actions/upload-artifacts/: action.yml
.github/workflows/: main.yml
quickjs/: __init__.py
